<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/app_background"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/text"
        android:hint="@string/add_task"
        android:textColor="@color/text"
        android:textColorHint="@color/text"/>

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_category"
            android:checked="true"
            android:textColor="@color/text"
            android:buttonTint="@color/personal_category"/>

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/business_category"
            android:textColor="@color/text"
            android:buttonTint="@color/business_category"/>

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_category"
            android:textColor="@color/text"
            android:buttonTint="@color/other_category"/>
    </RadioGroup>


    <Button
        android:id="@+id/btnTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_task"
        android:textAllCaps="true"
        android:backgroundTint="@color/accent"/>

</LinearLayout>